Update integration test to validate exports using signed urls