@@ -6,6 +6,7 @@ import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.emptyIterable;
 import static org.hamcrest.Matchers.emptyOrNullString;
 import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.greaterThan;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.iterableWithSize;
 import static org.hamcrest.Matchers.not;
@@ -44,12 +45,21 @@ import com.google.cloud.storage.BucketInfo;
 import com.google.cloud.storage.Storage;
 import com.google.cloud.storage.StorageException;
 import com.google.cloud.storage.StorageOptions;
+import java.io.IOException;
+import java.io.InputStream;
+import java.net.URI;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+import org.apache.http.client.methods.CloseableHttpResponse;
+import org.apache.http.client.methods.HttpGet;
+import org.apache.http.client.methods.HttpUriRequest;
+import org.apache.http.impl.client.CloseableHttpClient;
+import org.apache.http.impl.client.HttpClients;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Rule;
@@ -147,14 +157,23 @@ public class SnapshotExportIntegrationTest extends UsersBase {
     createdSnapshotIds.add(snapshotId);
 
     DataRepoResponse<JobModel> failedExportResponse =
-        dataRepoFixtures.exportSnapshot(reader(), snapshotSummary.getId(), false, false);
+        dataRepoFixtures.exportSnapshot(reader(), snapshotSummary.getId(), false, false, false);
     assertThat(
         "Reader is not authorized to export a snapshot",
         failedExportResponse.getStatusCode(),
         equalTo(HttpStatus.FORBIDDEN));
 
+    // Test using signed URLS
+    testExport(snapshotId, true);
+
+    // Test using gs URIS
+    testExport(snapshotId, false);
+  }
+
+  private void testExport(UUID snapshotId, boolean signUrls) throws Exception {
+
     DataRepoResponse<SnapshotExportResponseModel> exportResponse =
-        dataRepoFixtures.exportSnapshotLog(steward(), snapshotId, false, true);
+        dataRepoFixtures.exportSnapshotLog(steward(), snapshotId, false, true, signUrls);
 
     SnapshotExportResponseModel exportModel = exportResponse.getResponseObject().orElseThrow();
 
@@ -173,19 +192,26 @@ public class SnapshotExportIntegrationTest extends UsersBase {
         "The response has the correct tables",
         parquet.getLocation().getTables().stream()
             .map(SnapshotExportResponseModelFormatParquetLocationTables::getName)
-            .collect(Collectors.toList()),
+            .toList(),
         containsInAnyOrder("participant", "sample"));
 
     assertThat("Response contains the snapshot", snapshot.getId(), equalTo(snapshotId));
 
-    BlobId manifestBlob = GcsUriUtils.parseBlobUri(parquet.getManifest());
-
-    String bucketProject = manifestBlob.getBucket().replace("-snapshot-export-bucket", "");
-    String manifestContentsRaw =
-        gcsPdao
-            .getBlobsLinesStream(parquet.getManifest(), bucketProject, null)
-            .collect(Collectors.joining("\n"));
-
+    String manifestContentsRaw;
+    String manifestBucket;
+    if (signUrls) {
+      manifestContentsRaw = new String(readUrl(parquet.getManifest()), StandardCharsets.UTF_8);
+      // The first element in the path is the bucket with Google's signed urls
+      manifestBucket = URI.create(parquet.getManifest()).getPath().split("/")[1];
+    } else {
+      BlobId manifestBlob = GcsUriUtils.parseBlobUri(parquet.getManifest());
+      manifestBucket = manifestBlob.getBucket();
+      String bucketProject = manifestBlob.getBucket().replace("-snapshot-export-bucket", "");
+      manifestContentsRaw =
+          gcsPdao
+              .getBlobsLinesStream(parquet.getManifest(), bucketProject, null)
+              .collect(Collectors.joining("\n"));
+    }
     TypeReference<SnapshotExportResponseModel> ref = new TypeReference<>() {};
     SnapshotExportResponseModel manifestContents =
         objectMapper.convertValue(objectMapper.readTree(manifestContentsRaw), ref);
@@ -202,8 +228,7 @@ public class SnapshotExportIntegrationTest extends UsersBase {
 
     Integer deleteAge = 1;
 
-    var lifecycleRules =
-        googleBucketService.getCloudBucket(manifestBlob.getBucket()).getLifecycleRules();
+    var lifecycleRules = googleBucketService.getCloudBucket(manifestBucket).getLifecycleRules();
 
     var lifecycleRule = lifecycleRules.get(0);
     var lifecycleAction = lifecycleRule.getAction();
@@ -220,7 +245,7 @@ public class SnapshotExportIntegrationTest extends UsersBase {
         Stream.concat(
                 parquet.getLocation().getTables().stream().flatMap(t -> t.getPaths().stream()),
                 Stream.of(parquet.getManifest()))
-            .collect(Collectors.toList());
+            .toList();
 
     Storage unauthedStorage =
         StorageOptions.newBuilder()
@@ -234,19 +259,46 @@ public class SnapshotExportIntegrationTest extends UsersBase {
             .getService();
 
     for (var path : paths) {
-      Blob blob = authedStorage.get(GcsUriUtils.parseBlobUri(parquet.getManifest()));
-      assertThat("Authorized user can read " + path, blob, notNullValue());
+      if (signUrls) {
+        // Make sure we can download the parquet bytes
+        byte[] bytes = readUrl(path);
+        assertThat(
+            "Signed URL is accessible and parquet isn't empty", bytes.length, greaterThan(0));
+      } else {
+        Blob blob = authedStorage.get(GcsUriUtils.parseBlobUri(parquet.getManifest()));
+        assertThat("Authorized user can read " + path, blob, notNullValue());
 
-      StorageException notAuthorizedException = null;
-      try {
-        unauthedStorage.get(GcsUriUtils.parseBlobUri(parquet.getManifest()));
-      } catch (StorageException ex) {
-        notAuthorizedException = ex;
+        StorageException notAuthorizedException = null;
+        try {
+          unauthedStorage.get(GcsUriUtils.parseBlobUri(parquet.getManifest()));
+        } catch (StorageException ex) {
+          notAuthorizedException = ex;
+        }
+        // Appeasing SpotBugs
+        assert notAuthorizedException != null;
+        assertThat(
+            "Unauthorized user cannot read " + path,
+            notAuthorizedException.getCode(),
+            equalTo(403));
       }
-      // Appeasing SpotBugs
-      assert notAuthorizedException != null;
-      assertThat(
-          "Unauthorized user cannot read " + path, notAuthorizedException.getCode(), equalTo(403));
+    }
+  }
+
+  private byte[] readUrl(String url) throws IOException {
+    try (CloseableHttpClient client = HttpClients.createDefault()) {
+      HttpUriRequest request = new HttpGet(url);
+      try (CloseableHttpResponse response = client.execute(request); ) {
+        assertThat(
+            "Signed URL is accessible",
+            response.getStatusLine().getStatusCode(),
+            equalTo(HttpStatus.OK.value()));
+
+        byte[] bytes;
+        try (InputStream responseBody = response.getEntity().getContent()) {
+          bytes = responseBody.readAllBytes();
+        }
+        return bytes;
+      }
     }
   }
 
@@ -277,7 +329,7 @@ public class SnapshotExportIntegrationTest extends UsersBase {
     UUID snapshotId = snapshotSummary.getId();
     createdSnapshotIds.add(snapshotId);
     DataRepoResponse<SnapshotExportResponseModel> exportResponse =
-        dataRepoFixtures.exportSnapshotLog(steward(), snapshotId, true, false);
+        dataRepoFixtures.exportSnapshotLog(steward(), snapshotId, true, false, true);
 
     SnapshotExportResponseModel exportModel = exportResponse.getResponseObject().orElseThrow();
     SnapshotExportResponseModelFormatParquet parquet = exportModel.getFormat().getParquet();
@@ -335,7 +387,7 @@ public class SnapshotExportIntegrationTest extends UsersBase {
     UUID snapshotId = snapshotSummary.getId();
     createdSnapshotIds.add(snapshotId);
     DataRepoResponse<SnapshotExportResponseModel> exportResponse =
-        dataRepoFixtures.exportSnapshotLog(steward(), snapshotId, false, true);
+        dataRepoFixtures.exportSnapshotLog(steward(), snapshotId, false, true, true);
 
     ErrorModel errorModel = exportResponse.getErrorObject().orElseThrow();
 
